[package]
name = "routetype-example"
version = "0.1.0"
authors = ["Michael Snoyman <michael@snoyman.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
routetype = { path = "../routetype" }
routetype-warp = { path = "../routetype-warp" }
routetype-hyper = { path = "../routetype-hyper", features = ["askama"] }
warp = "0.3"
tokio = { version = "1", features = ["full"] }
askama = ""

[[bin]]
name = "routetype-example-warp"
path = "src/warp.rs"

[[bin]]
name = "routetype-example-hyper"
path = "src/hyper.rs"
