[package]
name = "routetype-hyper"
version = "0.1.0"
authors = ["Michael Snoyman <michael@snoyman.com>"]
edition = "2018"

[features]
default = []

[dependencies]
routetype = { path = "../routetype" }
hyper = { version = "0.14", features = ["server"] }
async-trait = "0.1.50"
askama = { version = "0.10.5", optional = true }
anyhow = "1"
