[package]
name = "routetype-hyper"
version = "0.1.0"
authors = ["Michael Snoyman <michael@snoyman.com>"]
edition = "2018"

[features]
default = []
grpc = ["tonic"]
tls = ["tokio-rustls"]
full = ["grpc", "tls", "askama"]

[dependencies]
routetype = { path = "../routetype" }
hyper = { version = "0.14", features = ["server"] }
async-trait = "0.1.50"
askama = { version = "0.10.5", optional = true }
anyhow = "1"
tonic = { version = "0.4.3", features = ["transport"], optional = true }
tokio-rustls = { version = "0.22", optional = true }
tokio = "1"
futures = "0.3"
log = "0.4"
uuid = { version = "0.8.2", features = ["v4"] }
